# annbatch

./: .gitignore  INSTALL_C_EXT.md  README.md  build_ext.py  pyproject.toml
docs/: api.md  conf.py  index.md
src/annbatch/: __init__.py  _direct_read.py  _shard_reader.c  compat.py  io.py  loader.py  sampler.py  types.py  utils.py
src/annbatch/abc/: sampler.py
src/annbatch/sampler/: __init__.py  _categorical_sampler.py  _sampler.py  _utils.py
src/annbatch/samplers/: __init__.py  _batch_sampler.py  _categorical_sampler.py  _chunk_sampler.py  _chunk_sampler_distributed.py  _random.py  _sequential.py
tests/: bench_backends.py  bench_load_request.py  bench_loader.py  bench_mmap_vs_pread.py  conftest.py  test_categorical_sampler.py  test_dataset.py  test_grouped_collection.py  test_preshuffle.py  test_sampler.py  test_store_creation.py
zarrs_direct/: Cargo.toml  pyproject.toml
zarrs_direct/python/zarr_direct/: __init__.py  _zarrs_direct.pyi  reader.py
zarrs_direct/src/: lib.rs  mmap_store.rs  pread_store.rs  reader.rs  shard_meta.rs
zarrs_direct/tests/: bench_ablation.py  test_reader.py
